--- a/kadai_014/style.css
+++ b/kadai_014/style.css
@@ -1,25 +1,25 @@
+html{
+  font-size: 20px;
+}
 body{
   font-family:"Arial", "Meiryo", sans-serif;
-  font-size: 20px;
   text-align: center;
 }
 h1{
+  font-size: 2rem;
   letter-spacing: 1.2em;
-  text-shadow: 2px 3px 3px;
+  text-shadow: 2px 1px 5px;
   border-bottom: solid 3px rgb(115, 115, 114);
 }
+
 #basic{
-  p{
     font-weight: bold;
   }
-}
 
 .google-font{
   font-family: "Josefin Sans", sans-serif;
   font-optical-sizing: auto;
-  font-weight: <weight>;
   font-style: normal;
-  font-size: 2em;
 }
 .text-pink{
   color: rgb(255, 192, 203);
